# chatyzone

./: .gitignore  docker-compose.yml  package-lock.json
backend/: .env  Dockerfile  app.py  pyproject.toml
backend/src/: main.py  utils.py
backend/src/ai_models/: rag.py
backend/src/core/: config.py  database.py  model_mapping.py  security.py  variables.py
backend/src/middleware/: LoggingMiddleware.py  security.py
backend/src/models/: chat.py  file.py  folder.py  user.py
backend/src/routes/: auth.py  chat.py  file.py  folder.py
backend/src/schema/: base.py  chat.py  file.py  folder.py  user.py
backend/src/uploads/USR0001/: PDFCHATIFIZER.docx
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  OLD APP.jsx  constant.js  index.css
frontend/src/api/: chat.js  files.js
frontend/src/components/Chat/: ChatHeader.jsx  MessageInput.jsx  MessageList.jsx  index.jsx
frontend/src/components/Common/: Button.jsx
frontend/src/components/Fileviewer/: FileMetadata.jsx  FilePreview.jsx  index.jsx
frontend/src/components/Layouts/: MainLayout.jsx  Panel.jsx
frontend/src/components/Sidebars/: FileUpload.jsx  SearchBar.jsx  index.jsx
frontend/src/components/Sidebars/FolderTree/: FolderNode.jsx  index.jsx
frontend/src/context/: AppContext.jsx
frontend/src/hooks/: useFetchFiles.js
frontend/src/utils/: format.js
