[project]
name = "chatifizer_backend"
version = "0.1.0"
description = "Backend File for Chatifizer"
authors = [
    {name = "Suraj"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pymongo (>=4.13.0,<5.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "load-dotenv (>=0.1.0,<0.2.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
